---
title: Core ERD - Lending, Governance, and Agent Session Entities
config:
  er:
    fontSize: 30
    entityPadding: 30
---
erDiagram
    WORLD_BANK ||--o{ NATIONAL_BANK : registers
    NATIONAL_BANK ||--o{ LOCAL_BANK : registers
    LOCAL_BANK ||--o{ BANK_USER : employs
    LOCAL_BANK ||--o{ BORROWER : onboards
    BORROWER ||--o{ LOAN_REQUEST : submits
    BANK_USER ||--o{ LOAN_REQUEST : approves
    LOAN_REQUEST ||--|| LOAN : produces
    LOAN ||--o{ INSTALLMENT : schedules
    INSTALLMENT ||--o| TRANSACTION : settled_by
    BORROWER ||--o{ INCOME_PROOF : provides
    BORROWER ||--o{ CHAT_MESSAGE : sends
    LOAN ||--o{ AI_ML_LOG : scored_by
    BORROWER ||--o| CREDIT_PASSPORT : holds
    BORROWER ||--o{ SESSIONS : has
    SESSIONS ||--o{ AGENT_ACTION_LOG : audits
    WORLD_BANK ||--o| INTEREST_RATE_TIER : uses
    LOAN }o--|| ASSETS : collateral_asset
    LOAN }o--|| ASSETS : loan_asset

    WORLD_BANK {
        bigint bank_id PK
        string name UK
        numeric reserve_ratio
    }
    NATIONAL_BANK {
        bigint bank_id PK
        bigint parent_id FK
        numeric allocated_capital
    }
    LOCAL_BANK {
        bigint bank_id PK
        bigint parent_id FK
        numeric pool_balance
    }
    BORROWER {
        bigint borrower_id PK
        string wallet UK
        int kyc_level
        int tier
    }
    LOAN_REQUEST {
        bigint request_id PK
        numeric amount
        string status
    }
    LOAN {
        bigint loan_id PK
        bigint loan_request_id FK
        numeric principal
        int term_months
    }
    INSTALLMENT {
        bigint loan_id FK
        int installment_number PK
        date due_date
        numeric amount_due
    }
    CREDIT_PASSPORT {
        int risk_tier
        int open_loans
        int credit_score
    }
    SESSIONS {
        uuid session_id PK
        json session_key_scope
    }
